--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Ford\\Escape\\": "src/Ford/Escape",
-            "Ford\\Fusion\\": "src/Ford/Fusion",
-            "Ford\\Focus\\": "src/Ford/Focus",
-            "Ford\\Fiesta\\": "src/Ford/Fiesta"
+            "Ford\\": "",
         }
     }
 }
